--- a/package.json
+++ b/package.json
@@ -15,14 +15,18 @@
   "dependencies": {
     "@angular/common": "~11.2.0",
     "@angular/core": "~11.2.0",
+    "@angular/fire": "^6.1.4",
     "@angular/forms": "~11.2.0",
     "@angular/platform-browser": "~11.2.0",
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
     "@ionic-native/core": "^5.32.1",
     "@ionic-native/firebase": "^5.32.1",
+    "@ionic-native/firebase-authentication": "^5.32.1",
     "@ionic/angular": "^5.5.2",
     "@ionic/cli": "^6.13.1",
+    "angularfire2": "^5.4.2",
+    "firebase": "^7.24.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
@@ -45,6 +49,7 @@
     "@typescript-eslint/parser": "4.16.1",
     "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-firebase": "^2.0.5",
+    "cordova-plugin-firebase-authentication": "^4.0.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.2.1",
     "cordova-plugin-splashscreen": "^5.0.4",
@@ -64,7 +69,13 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "typescript": "~4.0.2"
+    "typescript": "~4.0.2",
+    "@angular-devkit/architect": ">= 0.900 < 0.1200",
+    "firebase-tools": "^8.0.0",
+    "fuzzy": "^0.1.3",
+    "inquirer": "^6.2.2",
+    "inquirer-autocomplete-prompt": "^1.0.1",
+    "open": "^7.0.3"
   },
   "description": "An Ionic project",
   "cordova": {
@@ -77,7 +88,8 @@
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-firebase": {}
+      "cordova-plugin-firebase": {},
+      "cordova-plugin-firebase-authentication": {}
     },
     "platforms": [
       "android"
